# HRL

./: .gitignore  HPC Path (2).txt  README.md  bashfile.sh  main.py  pyproject.toml  requirements.txt  test_env.py  test_plotting_nn.py
addons/: ADDONS_GUIDE.md  README.md  __init__.py
addons/encoder/: __init__.py  pixel_encoder.py
addons/gas/: __init__.py  gas_miner.py  integration.py  subgoal_rewards.py
addons/simple_sf/: __init__.py  integration.py  simple_sf.py
addons/utils/: __init__.py  rollout_collector.py
archive/: test_env.py
baseline_models/: ASTAR_README.md  a_star_agent.py  astar_networkx.py  astar_utils.py  q_learning_agent.py
config/: config.yaml
config/environment/: base.yaml  default.yaml  four_rooms.yaml  option_showcase.yaml  thin_ice.yaml
config/experiment/: all_example.yaml  astar_example.yaml  option_critic_example.yaml  option_critic_nn_example.yaml  qlearning_example.yaml  random_example.yaml  sf_gas_example.yaml
config/models/: astar.yaml  default.yaml  option_critic.yaml  (+4 more)
configs/: flags.yaml
docs/: how_to_run.md
environment/: base_env.py  validate_environment.py
model/: base_manager.py
scripts/: finetune_with_subgoals.py  mine_subgoals.py
tests/: __init__.py  test_option_critic.py
thin_ice/: CONFIG_USAGE.md  EXPERIMENTAL_IMPLEMENTATION.md  EXPERIMENTAL_RENDERING.md  EXPERIMENTAL_USAGE.md  GYMNASIUM_README.md  INTEGRATION_SUMMARY.md  TEST_USAGE.md  ThinIce.py  astar_networkx.py  astar_utils.py  config.yaml  example_usage.py  test_env.py  test_experimental_env.py  thin_ice_env.py  thin_ice_env_experimental.py
(+90 files in other folders)
