[project]
name = "hrl-jan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "hydra-core>=1.3.2",
    "networkx>=3.0.0",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "pygame>=2.0.0",
    "pyyaml>=5.4.0",
]
