[project]
name = "hrl-jan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.0.0",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "pygame>=2.0.0",
    "pytest>=9.0.2",
    "pyyaml>=5.4.0",
    "torch>=2.9.1",
]

# Download with cuda if Windows
[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
